Make antlr4 compatible with JDK 1.8